<resources>
    <string name="app_name">thumper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_ip">IP Address</string>
    <string name="pref_title_port">Port Number</string>
    <string name="pref_tittle_nodejs">NodeJS Server</string>
    <string name="pref_tittle_ip_mqtt">IP Address</string>
    <string name="pref_tittle_mqtt">MQTT Server</string>
    <string name="pref_tittle_port_mqtt">Port Number</string>
</resources>
