<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_tittle_nodejs">

        <EditTextPreference
            android:defaultValue="10.0.0.1"
            android:key="pref_value_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_ip" />
    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="3000"
        android:key="pref_value_port"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port" />
    <PreferenceCategory android:title="@string/pref_tittle_mqtt">

    </PreferenceCategory>
    <EditTextPreference
        android:defaultValue="80"
        android:key="pref_value_port_mqtt"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_tittle_port_mqtt" />
    <EditTextPreference
        android:defaultValue="127.0.0.1"
        android:key="pref_value_ip_mqtt"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_tittle_ip_mqtt" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
